# stablecoin_contracts_solana

./: Anchor.toml  README.MD
programs/stablecoin_contracts_solana/: Cargo.toml
programs/stablecoin_contracts_solana/src/: lib.rs
programs/user_mng/: Cargo.toml
programs/user_mng/src/: lib.rs
tests/: stablecoin_contracts_solana.ts  user_mng.ts
